force-app/main/default/objects/MemberDonationReset__e/MemberDonationReset__e.object-meta.xml
<CustomObject>
    <description>Event is fired whenever donations are reset (due to a new season)</description>
    <label>Member Donation Reset</label>
    <pluralLabel>Member Donation Resets</pluralLabel>
</CustomObject>