force-app/main/default/objects/MemberDonationReset__e/fields/ClanMemberId__c.field-meta.xml
<CustomField>
    <fullName>ClanMemberId__c</fullName>
    <label>Clan Member Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>