force-app/main/default/objects/MemberDonationReset__e/fields/DonationsReceived__c.field-meta.xml
<CustomField>
    <fullName>DonationsReceived__c</fullName>
    <label>Donations Received</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>